exports[`retrieveFlight byIfplId builder should match snapshot 1`] = `
"
    <soapenv:Envelope xmlns:soapenv=\"http://schemas.xmlsoap.org/soap/envelope/\" xmlns:flig=\"eurocontrol/cfmu/b2b/FlightServices\">
      <soapenv:Header/>
      <soapenv:Body>
        
    <flig:FlightRetrievalRequest>
      
    <sendTime>2016-11-23 10:52:35</sendTime>
    <dataset>
      <type>OPERATIONAL</type>
    </dataset>
    <includeProposalFlights>false</includeProposalFlights>
    <flightId>
      <id>AA123456789</id>
    </flightId>
    <requestedFlightDatasets>flightPlan</requestedFlightDatasets>
  
    </flig:FlightRetrievalRequest>
  
      </soapenv:Body>
    </soapenv:Envelope>
  "
`;

exports[`retrieveFlight byIfplId builder should reject invalid arguments 1`] = `"Argument error: ifplId should be a string"`;

exports[`retrieveFlight byIfplId builder should reject invalid arguments 2`] = `"Argument error: ifplId should be a string"`;

exports[`retrieveFlight byIfplId builder should reject invalid arguments 3`] = `"Argument error: options should be an object"`;

exports[`retrieveFlight byKeys builder should generate a proper query 1`] = `
"
    <soapenv:Envelope xmlns:soapenv=\"http://schemas.xmlsoap.org/soap/envelope/\" xmlns:flig=\"eurocontrol/cfmu/b2b/FlightServices\">
      <soapenv:Header/>
      <soapenv:Body>
        
    <flig:FlightRetrievalRequest>
      
    <sendTime>2016-11-23 10:52:35</sendTime>
    <dataset>
      <type>OPERATIONAL</type>
    </dataset>
    <includeProposalFlights>false</includeProposalFlights>
    <flightId>
      <keys>
        <aircraftId>AFR1234</aircraftId>
        <aerodromeOfDeparture>LFPG</aerodromeOfDeparture>
        <airFiled>false</airFiled>
        <aerodromeOfDestination>LIPZ</aerodromeOfDestination>
        <estimatedOffBlockTime>2016-11-23 16:00</estimatedOffBlockTime>
      </keys>
    </flightId>
    <requestedFlightDatasets>flight</requestedFlightDatasets>
    <requestedFlightFields>ftfmPointProfile</requestedFlightFields>
    <requestedFlightFields>rtfmPointProfile</requestedFlightFields>
    <requestedFlightFields>ftfmAirspaceProfile</requestedFlightFields>
    <requestedFlightFields>rtfmAirspaceProfile</requestedFlightFields>
    <requestedFlightFields>delay</requestedFlightFields>
    <requestedFlightFields>aircraftType</requestedFlightFields>
  
    </flig:FlightRetrievalRequest>
  
      </soapenv:Body>
    </soapenv:Envelope>
  "
`;

exports[`retrieveFlight byKeys builder should reject invalid arguments 1`] = `"Argument error: callsign should be a string"`;

exports[`retrieveFlight byKeys builder should reject invalid arguments 2`] = `"Argument error: callsign should be a string"`;

exports[`retrieveFlight byKeys builder should reject invalid arguments 3`] = `"Argument error: callsign should be a string"`;

exports[`retrieveFlight byKeys builder should reject invalid arguments 4`] = `"Argument error: eobt should be a string"`;

exports[`retrieveFlight response parser should parse correct response 1`] = `
Object {
  "$": Object {
    "xmlns:airspace": "eurocontrol/cfmu/b2b/AirspaceServices",
    "xmlns:common": "eurocontrol/cfmu/b2b/CommonServices",
    "xmlns:flight": "eurocontrol/cfmu/b2b/FlightServices",
    "xmlns:flow": "eurocontrol/cfmu/b2b/FlowServices",
  },
  "data": Object {
    "flight": Object {
      "aircraftType": "AT75",
      "flightId": Object {
        "id": "AA58787132",
        "keys": Object {
          "aerodromeOfDeparture": "LFLL",
          "aerodromeOfDestination": "LFJL",
          "airFiled": "false",
          "aircraftId": "HOP48YT",
          "estimatedOffBlockTime": "2016-11-23 18:55",
          "nonICAOAerodromeOfDeparture": "false",
          "nonICAOAerodromeOfDestination": "false",
        },
      },
      "ftfmAirspaceProfile": Array [
        Object {
          "activated": "false",
          "airspaceId": "LFMMFIR",
          "airspaceType": "FIR",
          "firstEntryDistance": "0",
          "firstEntryFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "8",
            "unit": "F",
          },
          "firstEntryTime": "2016-11-23 19:03:00",
          "firstEntryTrend": "NONE",
          "lastExitDistance": "46",
          "lastExitFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "180",
            "unit": "F",
          },
          "lastExitTime": "2016-11-23 19:16:56",
          "lastExitTrend": "CRUISE",
          "middleTrend": "CLIMB",
          "occupancyDistance": "46",
          "occupancyDuration": "001356",
        },
        Object {
          "activated": "false",
          "airspaceId": "LF",
          "airspaceType": "NAS",
          "firstEntryDistance": "0",
          "firstEntryFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "8",
            "unit": "F",
          },
          "firstEntryTime": "2016-11-23 19:03:00",
          "firstEntryTrend": "NONE",
          "lastExitDistance": "288",
          "lastExitFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "9",
            "unit": "F",
          },
          "lastExitTime": "2016-11-23 20:11:07",
          "lastExitTrend": "NONE",
          "middleTrend": "CLIMB",
          "occupancyDistance": "288",
          "occupancyDuration": "010807",
        },
        Object {
          "activated": "false",
          "airspaceId": "LFLLTMA",
          "airspaceType": "AUA",
          "firstEntryDistance": "0",
          "firstEntryFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "8",
            "unit": "F",
          },
          "firstEntryTime": "2016-11-23 19:03:00",
          "firstEntryTrend": "NONE",
          "lastExitDistance": "30",
          "lastExitFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "145",
            "unit": "F",
          },
          "lastExitTime": "2016-11-23 19:12:37",
          "lastExitTrend": "CLIMB",
          "middleTrend": "CLIMB",
          "occupancyDistance": "30",
          "occupancyDuration": "000937",
        },
        Object {
          "activated": "false",
          "airspaceId": "LFFFLOW",
          "airspaceType": "ES",
          "firstEntryDistance": "0",
          "firstEntryFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "8",
            "unit": "F",
          },
          "firstEntryTime": "2016-11-23 19:03:00",
          "firstEntryTrend": "NONE",
          "lastExitDistance": "288",
          "lastExitFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "9",
            "unit": "F",
          },
          "lastExitTime": "2016-11-23 20:11:07",
          "lastExitTrend": "NONE",
          "middleTrend": "CLIMB",
          "occupancyDistance": "288",
          "occupancyDuration": "010807",
        },
        Object {
          "activated": "true",
          "airspaceId": "LFLLTA",
          "airspaceType": "ES",
          "firstEntryDistance": "0",
          "firstEntryFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "8",
            "unit": "F",
          },
          "firstEntryTime": "2016-11-23 19:03:00",
          "firstEntryTrend": "NONE",
          "lastExitDistance": "30",
          "lastExitFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "145",
            "unit": "F",
          },
          "lastExitTime": "2016-11-23 19:12:37",
          "lastExitTrend": "CLIMB",
          "middleTrend": "CLIMB",
          "occupancyDistance": "30",
          "occupancyDuration": "000937",
        },
        Object {
          "activated": "false",
          "airspaceId": "LSAGNEST",
          "airspaceType": "CS",
          "firstEntryDistance": "0",
          "firstEntryFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "8",
            "unit": "F",
          },
          "firstEntryTime": "2016-11-23 19:03:00",
          "firstEntryTrend": "NONE",
          "lastExitDistance": "260",
          "lastExitFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "114",
            "unit": "F",
          },
          "lastExitTime": "2016-11-23 20:02:58",
          "lastExitTrend": "DESCENT",
          "middleTrend": "CLIMB",
          "occupancyDistance": "260",
          "occupancyDuration": "005958",
        },
        Object {
          "activated": "false",
          "airspaceId": "ENLF",
          "airspaceType": "AUAG",
          "firstEntryDistance": "0",
          "firstEntryFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "8",
            "unit": "F",
          },
          "firstEntryTime": "2016-11-23 19:03:00",
          "firstEntryTrend": "NONE",
          "lastExitDistance": "288",
          "lastExitFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "9",
            "unit": "F",
          },
          "lastExitTime": "2016-11-23 20:11:07",
          "lastExitTrend": "NONE",
          "middleTrend": "CLIMB",
          "occupancyDistance": "288",
          "occupancyDuration": "010807",
        },
        Object {
          "activated": "false",
          "airspaceId": "LFCC",
          "airspaceType": "AUAG",
          "firstEntryDistance": "0",
          "firstEntryFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "8",
            "unit": "F",
          },
          "firstEntryTime": "2016-11-23 19:03:00",
          "firstEntryTrend": "NONE",
          "lastExitDistance": "288",
          "lastExitFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "9",
            "unit": "F",
          },
          "lastExitTime": "2016-11-23 20:11:07",
          "lastExitTrend": "NONE",
          "middleTrend": "CLIMB",
          "occupancyDistance": "288",
          "occupancyDuration": "010807",
        },
        Object {
          "activated": "false",
          "airspaceId": "LFDCT",
          "airspaceType": "AUAG",
          "firstEntryDistance": "0",
          "firstEntryFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "8",
            "unit": "F",
          },
          "firstEntryTime": "2016-11-23 19:03:00",
          "firstEntryTrend": "NONE",
          "lastExitDistance": "288",
          "lastExitFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "9",
            "unit": "F",
          },
          "lastExitTime": "2016-11-23 20:11:07",
          "lastExitTrend": "NONE",
          "middleTrend": "CLIMB",
          "occupancyDistance": "288",
          "occupancyDuration": "010807",
        },
        Object {
          "activated": "false",
          "airspaceId": "LFMMCC",
          "airspaceType": "AUAG",
          "firstEntryDistance": "0",
          "firstEntryFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "8",
            "unit": "F",
          },
          "firstEntryTime": "2016-11-23 19:03:00",
          "firstEntryTrend": "NONE",
          "lastExitDistance": "46",
          "lastExitFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "180",
            "unit": "F",
          },
          "lastExitTime": "2016-11-23 19:16:56",
          "lastExitTrend": "CRUISE",
          "middleTrend": "CLIMB",
          "occupancyDistance": "46",
          "occupancyDuration": "001356",
        },
        Object {
          "activated": "false",
          "airspaceId": "LFMMDCT",
          "airspaceType": "AUAG",
          "firstEntryDistance": "0",
          "firstEntryFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "8",
            "unit": "F",
          },
          "firstEntryTime": "2016-11-23 19:03:00",
          "firstEntryTrend": "NONE",
          "lastExitDistance": "46",
          "lastExitFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "180",
            "unit": "F",
          },
          "lastExitTime": "2016-11-23 19:16:56",
          "lastExitTrend": "CRUISE",
          "middleTrend": "CLIMB",
          "occupancyDistance": "46",
          "occupancyDuration": "001356",
        },
        Object {
          "activated": "false",
          "airspaceId": "LFBBCCAOI",
          "airspaceType": "AOI",
          "firstEntryDistance": "0",
          "firstEntryFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "8",
            "unit": "F",
          },
          "firstEntryTime": "2016-11-23 19:03:00",
          "firstEntryTrend": "NONE",
          "lastExitDistance": "51",
          "lastExitFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "180",
            "unit": "F",
          },
          "lastExitTime": "2016-11-23 19:17:59",
          "lastExitTrend": "CRUISE",
          "middleTrend": "CLIMB",
          "occupancyDistance": "51",
          "occupancyDuration": "001459",
        },
        Object {
          "activated": "false",
          "airspaceId": "LFFFCCAOI",
          "airspaceType": "AOI",
          "firstEntryDistance": "0",
          "firstEntryFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "8",
            "unit": "F",
          },
          "firstEntryTime": "2016-11-23 19:03:00",
          "firstEntryTrend": "NONE",
          "lastExitDistance": "288",
          "lastExitFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "9",
            "unit": "F",
          },
          "lastExitTime": "2016-11-23 20:11:07",
          "lastExitTrend": "NONE",
          "middleTrend": "CLIMB",
          "occupancyDistance": "288",
          "occupancyDuration": "010807",
        },
        Object {
          "activated": "false",
          "airspaceId": "LFMMCCAOI",
          "airspaceType": "AOI",
          "firstEntryDistance": "0",
          "firstEntryFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "8",
            "unit": "F",
          },
          "firstEntryTime": "2016-11-23 19:03:00",
          "firstEntryTrend": "NONE",
          "lastExitDistance": "93",
          "lastExitFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "180",
            "unit": "F",
          },
          "lastExitTime": "2016-11-23 19:27:02",
          "lastExitTrend": "CRUISE",
          "middleTrend": "CLIMB",
          "occupancyDistance": "93",
          "occupancyDuration": "002402",
        },
        Object {
          "activated": "false",
          "airspaceId": "LSAGCCAOI",
          "airspaceType": "AOI",
          "firstEntryDistance": "0",
          "firstEntryFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "8",
            "unit": "F",
          },
          "firstEntryTime": "2016-11-23 19:03:00",
          "firstEntryTrend": "NONE",
          "lastExitDistance": "96",
          "lastExitFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "180",
            "unit": "F",
          },
          "lastExitTime": "2016-11-23 19:27:37",
          "lastExitTrend": "CRUISE",
          "middleTrend": "CLIMB",
          "occupancyDistance": "96",
          "occupancyDuration": "002437",
        },
        Object {
          "activated": "false",
          "airspaceId": "LFBBCCAOP",
          "airspaceType": "AOP",
          "firstEntryDistance": "0",
          "firstEntryFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "8",
            "unit": "F",
          },
          "firstEntryTime": "2016-11-23 19:03:00",
          "firstEntryTrend": "NONE",
          "lastExitDistance": "117",
          "lastExitFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "180",
            "unit": "F",
          },
          "lastExitTime": "2016-11-23 19:32:09",
          "lastExitTrend": "CRUISE",
          "middleTrend": "CLIMB",
          "occupancyDistance": "98",
          "occupancyDuration": "002459",
        },
        Object {
          "activated": "false",
          "airspaceId": "LFEECCAOP",
          "airspaceType": "AOP",
          "firstEntryDistance": "0",
          "firstEntryFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "8",
            "unit": "F",
          },
          "firstEntryTime": "2016-11-23 19:03:00",
          "firstEntryTrend": "NONE",
          "lastExitDistance": "288",
          "lastExitFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "9",
            "unit": "F",
          },
          "lastExitTime": "2016-11-23 20:11:07",
          "lastExitTrend": "NONE",
          "middleTrend": "CLIMB",
          "occupancyDistance": "288",
          "occupancyDuration": "010807",
        },
        Object {
          "activated": "false",
          "airspaceId": "LFFFCCAOP",
          "airspaceType": "AOP",
          "firstEntryDistance": "0",
          "firstEntryFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "8",
            "unit": "F",
          },
          "firstEntryTime": "2016-11-23 19:03:00",
          "firstEntryTrend": "NONE",
          "lastExitDistance": "288",
          "lastExitFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "9",
            "unit": "F",
          },
          "lastExitTime": "2016-11-23 20:11:07",
          "lastExitTrend": "NONE",
          "middleTrend": "CLIMB",
          "occupancyDistance": "288",
          "occupancyDuration": "010807",
        },
        Object {
          "activated": "false",
          "airspaceId": "LFMMCCAOP",
          "airspaceType": "AOP",
          "firstEntryDistance": "0",
          "firstEntryFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "8",
            "unit": "F",
          },
          "firstEntryTime": "2016-11-23 19:03:00",
          "firstEntryTrend": "NONE",
          "lastExitDistance": "144",
          "lastExitFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "180",
            "unit": "F",
          },
          "lastExitTime": "2016-11-23 19:37:50",
          "lastExitTrend": "CRUISE",
          "middleTrend": "CLIMB",
          "occupancyDistance": "144",
          "occupancyDuration": "003450",
        },
        Object {
          "activated": "false",
          "airspaceId": "LSAGCCAOP",
          "airspaceType": "AOP",
          "firstEntryDistance": "0",
          "firstEntryFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "8",
            "unit": "F",
          },
          "firstEntryTime": "2016-11-23 19:03:00",
          "firstEntryTrend": "NONE",
          "lastExitDistance": "116",
          "lastExitFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "180",
            "unit": "F",
          },
          "lastExitTime": "2016-11-23 19:31:55",
          "lastExitTrend": "CRUISE",
          "middleTrend": "CLIMB",
          "occupancyDistance": "116",
          "occupancyDuration": "002855",
        },
        Object {
          "activated": "false",
          "airspaceId": "LFEECCAOI",
          "airspaceType": "AOI",
          "firstEntryDistance": "13",
          "firstEntryFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "82",
            "unit": "F",
          },
          "firstEntryTime": "2016-11-23 19:07:18",
          "firstEntryTrend": "CLIMB",
          "lastExitDistance": "288",
          "lastExitFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "9",
            "unit": "F",
          },
          "lastExitTime": "2016-11-23 20:11:07",
          "lastExitTrend": "NONE",
          "middleTrend": "DESCENT",
          "occupancyDistance": "275",
          "occupancyDuration": "010349",
        },
        Object {
          "activated": "false",
          "airspaceId": "LFMMCTA",
          "airspaceType": "AUA",
          "firstEntryDistance": "30",
          "firstEntryFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "145",
            "unit": "F",
          },
          "firstEntryTime": "2016-11-23 19:12:37",
          "firstEntryTrend": "CLIMB",
          "lastExitDistance": "46",
          "lastExitFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "180",
            "unit": "F",
          },
          "lastExitTime": "2016-11-23 19:16:56",
          "lastExitTrend": "CRUISE",
          "middleTrend": "CLIMB",
          "occupancyDistance": "16",
          "occupancyDuration": "000419",
        },
        Object {
          "activated": "false",
          "airspaceId": "LFMMCTAW",
          "airspaceType": "CLUS",
          "firstEntryDistance": "30",
          "firstEntryFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "145",
            "unit": "F",
          },
          "firstEntryTime": "2016-11-23 19:12:37",
          "firstEntryTrend": "CLIMB",
          "lastExitDistance": "46",
          "lastExitFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "180",
            "unit": "F",
          },
          "lastExitTime": "2016-11-23 19:16:56",
          "lastExitTrend": "CRUISE",
          "middleTrend": "CLIMB",
          "occupancyDistance": "16",
          "occupancyDuration": "000419",
        },
        Object {
          "activated": "false",
          "airspaceId": "LFMMLE",
          "airspaceType": "ES",
          "firstEntryDistance": "30",
          "firstEntryFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "145",
            "unit": "F",
          },
          "firstEntryTime": "2016-11-23 19:12:37",
          "firstEntryTrend": "CLIMB",
          "lastExitDistance": "46",
          "lastExitFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "180",
            "unit": "F",
          },
          "lastExitTime": "2016-11-23 19:16:56",
          "lastExitTrend": "CRUISE",
          "middleTrend": "CLIMB",
          "occupancyDistance": "16",
          "occupancyDuration": "000419",
        },
        Object {
          "activated": "false",
          "airspaceId": "LFMMLELS",
          "airspaceType": "CS",
          "firstEntryDistance": "30",
          "firstEntryFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "145",
            "unit": "F",
          },
          "firstEntryTime": "2016-11-23 19:12:37",
          "firstEntryTrend": "CLIMB",
          "lastExitDistance": "46",
          "lastExitFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "180",
            "unit": "F",
          },
          "lastExitTime": "2016-11-23 19:16:56",
          "lastExitTrend": "CRUISE",
          "middleTrend": "CLIMB",
          "occupancyDistance": "16",
          "occupancyDuration": "000419",
        },
        Object {
          "activated": "false",
          "airspaceId": "LFMMLOLE",
          "airspaceType": "CS",
          "firstEntryDistance": "30",
          "firstEntryFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "145",
            "unit": "F",
          },
          "firstEntryTime": "2016-11-23 19:12:37",
          "firstEntryTrend": "CLIMB",
          "lastExitDistance": "46",
          "lastExitFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "180",
            "unit": "F",
          },
          "lastExitTime": "2016-11-23 19:16:56",
          "lastExitTrend": "CRUISE",
          "middleTrend": "CLIMB",
          "occupancyDistance": "16",
          "occupancyDuration": "000419",
        },
        Object {
          "activated": "true",
          "airspaceId": "LFMMLYO",
          "airspaceType": "CS",
          "firstEntryDistance": "30",
          "firstEntryFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "145",
            "unit": "F",
          },
          "firstEntryTime": "2016-11-23 19:12:37",
          "firstEntryTrend": "CLIMB",
          "lastExitDistance": "46",
          "lastExitFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "180",
            "unit": "F",
          },
          "lastExitTime": "2016-11-23 19:16:56",
          "lastExitTrend": "CRUISE",
          "middleTrend": "CLIMB",
          "occupancyDistance": "16",
          "occupancyDuration": "000419",
        },
        Object {
          "activated": "false",
          "airspaceId": "LFMMMALY",
          "airspaceType": "CS",
          "firstEntryDistance": "30",
          "firstEntryFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "145",
            "unit": "F",
          },
          "firstEntryTime": "2016-11-23 19:12:37",
          "firstEntryTrend": "CLIMB",
          "lastExitDistance": "46",
          "lastExitFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "180",
            "unit": "F",
          },
          "lastExitTime": "2016-11-23 19:16:56",
          "lastExitTrend": "CRUISE",
          "middleTrend": "CLIMB",
          "occupancyDistance": "16",
          "occupancyDuration": "000419",
        },
        Object {
          "activated": "false",
          "airspaceId": "LFMMMALYM",
          "airspaceType": "CS",
          "firstEntryDistance": "30",
          "firstEntryFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "145",
            "unit": "F",
          },
          "firstEntryTime": "2016-11-23 19:12:37",
          "firstEntryTrend": "CLIMB",
          "lastExitDistance": "46",
          "lastExitFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "180",
            "unit": "F",
          },
          "lastExitTime": "2016-11-23 19:16:56",
          "lastExitTrend": "CRUISE",
          "middleTrend": "CLIMB",
          "occupancyDistance": "16",
          "occupancyDuration": "000419",
        },
        Object {
          "activated": "false",
          "airspaceId": "LFMMRAW",
          "airspaceType": "CS",
          "firstEntryDistance": "30",
          "firstEntryFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "145",
            "unit": "F",
          },
          "firstEntryTime": "2016-11-23 19:12:37",
          "firstEntryTrend": "CLIMB",
          "lastExitDistance": "46",
          "lastExitFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "180",
            "unit": "F",
          },
          "lastExitTime": "2016-11-23 19:16:56",
          "lastExitTrend": "CRUISE",
          "middleTrend": "CLIMB",
          "occupancyDistance": "16",
          "occupancyDuration": "000419",
        },
        Object {
          "activated": "false",
          "airspaceId": "LFMMRAWL",
          "airspaceType": "CS",
          "firstEntryDistance": "30",
          "firstEntryFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "145",
            "unit": "F",
          },
          "firstEntryTime": "2016-11-23 19:12:37",
          "firstEntryTrend": "CLIMB",
          "lastExitDistance": "46",
          "lastExitFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "180",
            "unit": "F",
          },
          "lastExitTime": "2016-11-23 19:16:56",
          "lastExitTrend": "CRUISE",
          "middleTrend": "CLIMB",
          "occupancyDistance": "16",
          "occupancyDuration": "000419",
        },
        Object {
          "activated": "false",
          "airspaceId": "LFMMRAWM",
          "airspaceType": "CS",
          "firstEntryDistance": "30",
          "firstEntryFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "145",
            "unit": "F",
          },
          "firstEntryTime": "2016-11-23 19:12:37",
          "firstEntryTrend": "CLIMB",
          "lastExitDistance": "46",
          "lastExitFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "180",
            "unit": "F",
          },
          "lastExitTime": "2016-11-23 19:16:56",
          "lastExitTrend": "CRUISE",
          "middleTrend": "CLIMB",
          "occupancyDistance": "16",
          "occupancyDuration": "000419",
        },
        Object {
          "activated": "false",
          "airspaceId": "LFMMRAWN",
          "airspaceType": "CS",
          "firstEntryDistance": "30",
          "firstEntryFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "145",
            "unit": "F",
          },
          "firstEntryTime": "2016-11-23 19:12:37",
          "firstEntryTrend": "CLIMB",
          "lastExitDistance": "46",
          "lastExitFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "180",
            "unit": "F",
          },
          "lastExitTime": "2016-11-23 19:16:56",
          "lastExitTrend": "CRUISE",
          "middleTrend": "CLIMB",
          "occupancyDistance": "16",
          "occupancyDuration": "000419",
        },
        Object {
          "activated": "false",
          "airspaceId": "ECFAB",
          "airspaceType": "AUAG",
          "firstEntryDistance": "30",
          "firstEntryFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "145",
            "unit": "F",
          },
          "firstEntryTime": "2016-11-23 19:12:37",
          "firstEntryTrend": "CLIMB",
          "lastExitDistance": "253",
          "lastExitFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "144",
            "unit": "F",
          },
          "lastExitTime": "2016-11-23 20:01:17",
          "lastExitTrend": "DESCENT",
          "middleTrend": "DESCENT",
          "occupancyDistance": "137",
          "occupancyDuration": "003012",
        },
        Object {
          "activated": "false",
          "airspaceId": "LF833CORE",
          "airspaceType": "AUAG",
          "firstEntryDistance": "30",
          "firstEntryFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "145",
            "unit": "F",
          },
          "firstEntryTime": "2016-11-23 19:12:37",
          "firstEntryTrend": "CLIMB",
          "lastExitDistance": "46",
          "lastExitFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "180",
            "unit": "F",
          },
          "lastExitTime": "2016-11-23 19:16:56",
          "lastExitTrend": "CRUISE",
          "middleTrend": "CLIMB",
          "occupancyDistance": "16",
          "occupancyDuration": "000419",
        },
        Object {
          "activated": "false",
          "airspaceId": "RADIAM",
          "airspaceType": "AUAG",
          "firstEntryDistance": "30",
          "firstEntryFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "145",
            "unit": "F",
          },
          "firstEntryTime": "2016-11-23 19:12:37",
          "firstEntryTrend": "CLIMB",
          "lastExitDistance": "253",
          "lastExitFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "144",
            "unit": "F",
          },
          "lastExitTime": "2016-11-23 20:01:17",
          "lastExitTrend": "DESCENT",
          "middleTrend": "DESCENT",
          "occupancyDistance": "137",
          "occupancyDuration": "003012",
        },
        Object {
          "activated": "false",
          "airspaceId": "LFEEFIR",
          "airspaceType": "FIR",
          "firstEntryDistance": "46",
          "firstEntryFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "180",
            "unit": "F",
          },
          "firstEntryTime": "2016-11-23 19:16:56",
          "firstEntryTrend": "CLIMB",
          "lastExitDistance": "288",
          "lastExitFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "9",
            "unit": "F",
          },
          "lastExitTime": "2016-11-23 20:11:07",
          "lastExitTrend": "NONE",
          "middleTrend": "DESCENT",
          "occupancyDistance": "242",
          "occupancyDuration": "005411",
        },
        Object {
          "activated": "false",
          "airspaceId": "LFSBTMA",
          "airspaceType": "AUA",
          "firstEntryDistance": "46",
          "firstEntryFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "180",
            "unit": "F",
          },
          "firstEntryTime": "2016-11-23 19:16:56",
          "firstEntryTrend": "CLIMB",
          "lastExitDistance": "132",
          "lastExitFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "180",
            "unit": "F",
          },
          "lastExitTime": "2016-11-23 19:35:24",
          "lastExitTrend": "CRUISE",
          "middleTrend": "CRUISE",
          "occupancyDistance": "86",
          "occupancyDuration": "001828",
        },
        Object {
          "activated": "true",
          "airspaceId": "LFSBBM",
          "airspaceType": "ES",
          "firstEntryDistance": "46",
          "firstEntryFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "180",
            "unit": "F",
          },
          "firstEntryTime": "2016-11-23 19:16:56",
          "firstEntryTrend": "CLIMB",
          "lastExitDistance": "132",
          "lastExitFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "180",
            "unit": "F",
          },
          "lastExitTime": "2016-11-23 19:35:24",
          "lastExitTrend": "CRUISE",
          "middleTrend": "CRUISE",
          "occupancyDistance": "86",
          "occupancyDuration": "001828",
        },
        Object {
          "activated": "false",
          "airspaceId": "LFSBALL",
          "airspaceType": "CS",
          "firstEntryDistance": "46",
          "firstEntryFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "180",
            "unit": "F",
          },
          "firstEntryTime": "2016-11-23 19:16:56",
          "firstEntryTrend": "CLIMB",
          "lastExitDistance": "132",
          "lastExitFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "180",
            "unit": "F",
          },
          "lastExitTime": "2016-11-23 19:35:24",
          "lastExitTrend": "CRUISE",
          "middleTrend": "CRUISE",
          "occupancyDistance": "86",
          "occupancyDuration": "001828",
        },
        Object {
          "activated": "false",
          "airspaceId": "LFEECC",
          "airspaceType": "AUAG",
          "firstEntryDistance": "46",
          "firstEntryFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "180",
            "unit": "F",
          },
          "firstEntryTime": "2016-11-23 19:16:56",
          "firstEntryTrend": "CLIMB",
          "lastExitDistance": "288",
          "lastExitFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "9",
            "unit": "F",
          },
          "lastExitTime": "2016-11-23 20:11:07",
          "lastExitTrend": "NONE",
          "middleTrend": "DESCENT",
          "occupancyDistance": "242",
          "occupancyDuration": "005411",
        },
        Object {
          "activated": "false",
          "airspaceId": "LFEEDCT",
          "airspaceType": "AUAG",
          "firstEntryDistance": "46",
          "firstEntryFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "180",
            "unit": "F",
          },
          "firstEntryTime": "2016-11-23 19:16:56",
          "firstEntryTrend": "CLIMB",
          "lastExitDistance": "288",
          "lastExitFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "9",
            "unit": "F",
          },
          "lastExitTime": "2016-11-23 20:11:07",
          "lastExitTrend": "NONE",
          "middleTrend": "DESCENT",
          "occupancyDistance": "242",
          "occupancyDuration": "005411",
        },
        Object {
          "activated": "false",
          "airspaceId": "LFFFSTREAM",
          "airspaceType": "ES",
          "firstEntryDistance": "93",
          "firstEntryFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "180",
            "unit": "F",
          },
          "firstEntryTime": "2016-11-23 19:27:02",
          "firstEntryTrend": "CRUISE",
          "lastExitDistance": "176",
          "lastExitFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "180",
            "unit": "F",
          },
          "lastExitTime": "2016-11-23 19:44:41",
          "lastExitTrend": "CRUISE",
          "middleTrend": "CRUISE",
          "occupancyDistance": "82",
          "occupancyDuration": "001739",
        },
        Object {
          "activated": "false",
          "airspaceId": "LFEECTA",
          "airspaceType": "AUA",
          "firstEntryDistance": "132",
          "firstEntryFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "180",
            "unit": "F",
          },
          "firstEntryTime": "2016-11-23 19:35:24",
          "firstEntryTrend": "CRUISE",
          "lastExitDistance": "253",
          "lastExitFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "144",
            "unit": "F",
          },
          "lastExitTime": "2016-11-23 20:01:17",
          "lastExitTrend": "DESCENT",
          "middleTrend": "DESCENT",
          "occupancyDistance": "120",
          "occupancyDuration": "002553",
        },
        Object {
          "activated": "false",
          "airspaceId": "LFEECTAE",
          "airspaceType": "CLUS",
          "firstEntryDistance": "132",
          "firstEntryFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "180",
            "unit": "F",
          },
          "firstEntryTime": "2016-11-23 19:35:24",
          "firstEntryTrend": "CRUISE",
          "lastExitDistance": "253",
          "lastExitFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "144",
            "unit": "F",
          },
          "lastExitTime": "2016-11-23 20:01:17",
          "lastExitTrend": "DESCENT",
          "middleTrend": "DESCENT",
          "occupancyDistance": "120",
          "occupancyDuration": "002553",
        },
        Object {
          "activated": "false",
          "airspaceId": "LFEESE",
          "airspaceType": "ES",
          "firstEntryDistance": "132",
          "firstEntryFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "180",
            "unit": "F",
          },
          "firstEntryTime": "2016-11-23 19:35:24",
          "firstEntryTrend": "CRUISE",
          "lastExitDistance": "171",
          "lastExitFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "180",
            "unit": "F",
          },
          "lastExitTime": "2016-11-23 19:43:45",
          "lastExitTrend": "CRUISE",
          "middleTrend": "CRUISE",
          "occupancyDistance": "39",
          "occupancyDuration": "000821",
        },
        Object {
          "activated": "false",
          "airspaceId": "LFEE5EH",
          "airspaceType": "CS",
          "firstEntryDistance": "132",
          "firstEntryFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "180",
            "unit": "F",
          },
          "firstEntryTime": "2016-11-23 19:35:24",
          "firstEntryTrend": "CRUISE",
          "lastExitDistance": "253",
          "lastExitFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "144",
            "unit": "F",
          },
          "lastExitTime": "2016-11-23 20:01:17",
          "lastExitTrend": "DESCENT",
          "middleTrend": "DESCENT",
          "occupancyDistance": "120",
          "occupancyDuration": "002553",
        },
        Object {
          "activated": "false",
          "airspaceId": "LFEE5H",
          "airspaceType": "CS",
          "firstEntryDistance": "132",
          "firstEntryFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "180",
            "unit": "F",
          },
          "firstEntryTime": "2016-11-23 19:35:24",
          "firstEntryTrend": "CRUISE",
          "lastExitDistance": "171",
          "lastExitFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "180",
            "unit": "F",
          },
          "lastExitTime": "2016-11-23 19:43:45",
          "lastExitTrend": "CRUISE",
          "middleTrend": "CRUISE",
          "occupancyDistance": "39",
          "occupancyDuration": "000821",
        },
        Object {
          "activated": "false",
          "airspaceId": "LFEEEHF",
          "airspaceType": "CS",
          "firstEntryDistance": "132",
          "firstEntryFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "180",
            "unit": "F",
          },
          "firstEntryTime": "2016-11-23 19:35:24",
          "firstEntryTrend": "CRUISE",
          "lastExitDistance": "253",
          "lastExitFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "144",
            "unit": "F",
          },
          "lastExitTime": "2016-11-23 20:01:17",
          "lastExitTrend": "DESCENT",
          "middleTrend": "DESCENT",
          "occupancyDistance": "120",
          "occupancyDuration": "002553",
        },
        Object {
          "activated": "true",
          "airspaceId": "LFEEESE",
          "airspaceType": "CS",
          "firstEntryDistance": "132",
          "firstEntryFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "180",
            "unit": "F",
          },
          "firstEntryTime": "2016-11-23 19:35:24",
          "firstEntryTrend": "CRUISE",
          "lastExitDistance": "253",
          "lastExitFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "144",
            "unit": "F",
          },
          "lastExitTime": "2016-11-23 20:01:17",
          "lastExitTrend": "DESCENT",
          "middleTrend": "DESCENT",
          "occupancyDistance": "120",
          "occupancyDuration": "002553",
        },
        Object {
          "activated": "false",
          "airspaceId": "LFEERFUE",
          "airspaceType": "CS",
          "firstEntryDistance": "132",
          "firstEntryFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "180",
            "unit": "F",
          },
          "firstEntryTime": "2016-11-23 19:35:24",
          "firstEntryTrend": "CRUISE",
          "lastExitDistance": "253",
          "lastExitFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "144",
            "unit": "F",
          },
          "lastExitTime": "2016-11-23 20:01:17",
          "lastExitTrend": "DESCENT",
          "middleTrend": "DESCENT",
          "occupancyDistance": "120",
          "occupancyDuration": "002553",
        },
        Object {
          "activated": "false",
          "airspaceId": "LFEERMS",
          "airspaceType": "CS",
          "firstEntryDistance": "132",
          "firstEntryFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "180",
            "unit": "F",
          },
          "firstEntryTime": "2016-11-23 19:35:24",
          "firstEntryTrend": "CRUISE",
          "lastExitDistance": "253",
          "lastExitFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "144",
            "unit": "F",
          },
          "lastExitTime": "2016-11-23 20:01:17",
          "lastExitTrend": "DESCENT",
          "middleTrend": "DESCENT",
          "occupancyDistance": "120",
          "occupancyDuration": "002553",
        },
        Object {
          "activated": "false",
          "airspaceId": "LFEESEUFH",
          "airspaceType": "CS",
          "firstEntryDistance": "132",
          "firstEntryFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "180",
            "unit": "F",
          },
          "firstEntryTime": "2016-11-23 19:35:24",
          "firstEntryTrend": "CRUISE",
          "lastExitDistance": "171",
          "lastExitFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "180",
            "unit": "F",
          },
          "lastExitTime": "2016-11-23 19:43:45",
          "lastExitTrend": "CRUISE",
          "middleTrend": "CRUISE",
          "occupancyDistance": "39",
          "occupancyDuration": "000821",
        },
        Object {
          "activated": "false",
          "airspaceId": "LFEESEUH",
          "airspaceType": "CS",
          "firstEntryDistance": "132",
          "firstEntryFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "180",
            "unit": "F",
          },
          "firstEntryTime": "2016-11-23 19:35:24",
          "firstEntryTrend": "CRUISE",
          "lastExitDistance": "171",
          "lastExitFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "180",
            "unit": "F",
          },
          "lastExitTime": "2016-11-23 19:43:45",
          "lastExitTrend": "CRUISE",
          "middleTrend": "CRUISE",
          "occupancyDistance": "39",
          "occupancyDuration": "000821",
        },
        Object {
          "activated": "false",
          "airspaceId": "LFEESUKH",
          "airspaceType": "CS",
          "firstEntryDistance": "132",
          "firstEntryFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "180",
            "unit": "F",
          },
          "firstEntryTime": "2016-11-23 19:35:24",
          "firstEntryTrend": "CRUISE",
          "lastExitDistance": "171",
          "lastExitFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "180",
            "unit": "F",
          },
          "lastExitTime": "2016-11-23 19:43:45",
          "lastExitTrend": "CRUISE",
          "middleTrend": "CRUISE",
          "occupancyDistance": "39",
          "occupancyDuration": "000821",
        },
        Object {
          "activated": "false",
          "airspaceId": "LFEESUXH",
          "airspaceType": "CS",
          "firstEntryDistance": "132",
          "firstEntryFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "180",
            "unit": "F",
          },
          "firstEntryTime": "2016-11-23 19:35:24",
          "firstEntryTrend": "CRUISE",
          "lastExitDistance": "171",
          "lastExitFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "180",
            "unit": "F",
          },
          "lastExitTime": "2016-11-23 19:43:45",
          "lastExitTrend": "CRUISE",
          "middleTrend": "CRUISE",
          "occupancyDistance": "39",
          "occupancyDuration": "000821",
        },
        Object {
          "activated": "false",
          "airspaceId": "LF833CORE",
          "airspaceType": "AUAG",
          "firstEntryDistance": "132",
          "firstEntryFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "180",
            "unit": "F",
          },
          "firstEntryTime": "2016-11-23 19:35:24",
          "firstEntryTrend": "CRUISE",
          "lastExitDistance": "253",
          "lastExitFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "144",
            "unit": "F",
          },
          "lastExitTime": "2016-11-23 20:01:17",
          "lastExitTrend": "DESCENT",
          "middleTrend": "DESCENT",
          "occupancyDistance": "120",
          "occupancyDuration": "002553",
        },
        Object {
          "activated": "false",
          "airspaceId": "EDUUCCAOP",
          "airspaceType": "AOP",
          "firstEntryDistance": "164",
          "firstEntryFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "180",
            "unit": "F",
          },
          "firstEntryTime": "2016-11-23 19:42:08",
          "firstEntryTrend": "CRUISE",
          "lastExitDistance": "288",
          "lastExitFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "9",
            "unit": "F",
          },
          "lastExitTime": "2016-11-23 20:11:07",
          "lastExitTrend": "NONE",
          "middleTrend": "DESCENT",
          "occupancyDistance": "125",
          "occupancyDuration": "002859",
        },
        Object {
          "activated": "false",
          "airspaceId": "LFEEE",
          "airspaceType": "ES",
          "firstEntryDistance": "171",
          "firstEntryFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "180",
            "unit": "F",
          },
          "firstEntryTime": "2016-11-23 19:43:45",
          "firstEntryTrend": "CRUISE",
          "lastExitDistance": "253",
          "lastExitFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "144",
            "unit": "F",
          },
          "lastExitTime": "2016-11-23 20:01:17",
          "lastExitTrend": "DESCENT",
          "middleTrend": "DESCENT",
          "occupancyDistance": "82",
          "occupancyDuration": "001732",
        },
        Object {
          "activated": "false",
          "airspaceId": "LFEE5E",
          "airspaceType": "CS",
          "firstEntryDistance": "171",
          "firstEntryFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "180",
            "unit": "F",
          },
          "firstEntryTime": "2016-11-23 19:43:45",
          "firstEntryTrend": "CRUISE",
          "lastExitDistance": "253",
          "lastExitFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "144",
            "unit": "F",
          },
          "lastExitTime": "2016-11-23 20:01:17",
          "lastExitTrend": "DESCENT",
          "middleTrend": "DESCENT",
          "occupancyDistance": "82",
          "occupancyDuration": "001732",
        },
        Object {
          "activated": "false",
          "airspaceId": "LFEEEUE",
          "airspaceType": "CS",
          "firstEntryDistance": "171",
          "firstEntryFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "180",
            "unit": "F",
          },
          "firstEntryTime": "2016-11-23 19:43:45",
          "firstEntryTrend": "CRUISE",
          "lastExitDistance": "253",
          "lastExitFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "144",
            "unit": "F",
          },
          "lastExitTime": "2016-11-23 20:01:17",
          "lastExitTrend": "DESCENT",
          "middleTrend": "DESCENT",
          "occupancyDistance": "82",
          "occupancyDuration": "001732",
        },
        Object {
          "activated": "false",
          "airspaceId": "LFEEEUXE",
          "airspaceType": "CS",
          "firstEntryDistance": "171",
          "firstEntryFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "180",
            "unit": "F",
          },
          "firstEntryTime": "2016-11-23 19:43:45",
          "firstEntryTrend": "CRUISE",
          "lastExitDistance": "253",
          "lastExitFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "144",
            "unit": "F",
          },
          "lastExitTime": "2016-11-23 20:01:17",
          "lastExitTrend": "DESCENT",
          "middleTrend": "DESCENT",
          "occupancyDistance": "82",
          "occupancyDuration": "001732",
        },
        Object {
          "activated": "false",
          "airspaceId": "EDYYAOI",
          "airspaceType": "ES",
          "firstEntryDistance": "184",
          "firstEntryFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "180",
            "unit": "F",
          },
          "firstEntryTime": "2016-11-23 19:46:33",
          "firstEntryTrend": "CRUISE",
          "lastExitDistance": "245",
          "lastExitFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "174",
            "unit": "F",
          },
          "lastExitTime": "2016-11-23 19:59:39",
          "lastExitTrend": "DESCENT",
          "middleTrend": "DESCENT",
          "occupancyDistance": "61",
          "occupancyDuration": "001306",
        },
        Object {
          "activated": "false",
          "airspaceId": "EDYYCCAOP",
          "airspaceType": "AOP",
          "firstEntryDistance": "198",
          "firstEntryFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "180",
            "unit": "F",
          },
          "firstEntryTime": "2016-11-23 19:49:34",
          "firstEntryTrend": "CRUISE",
          "lastExitDistance": "288",
          "lastExitFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "9",
            "unit": "F",
          },
          "lastExitTime": "2016-11-23 20:11:07",
          "lastExitTrend": "NONE",
          "middleTrend": "DESCENT",
          "occupancyDistance": "90",
          "occupancyDuration": "002133",
        },
        Object {
          "activated": "false",
          "airspaceId": "EDUUCCAOI",
          "airspaceType": "AOI",
          "firstEntryDistance": "199",
          "firstEntryFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "180",
            "unit": "F",
          },
          "firstEntryTime": "2016-11-23 19:49:48",
          "firstEntryTrend": "CRUISE",
          "lastExitDistance": "288",
          "lastExitFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "9",
            "unit": "F",
          },
          "lastExitTime": "2016-11-23 20:11:07",
          "lastExitTrend": "NONE",
          "middleTrend": "DESCENT",
          "occupancyDistance": "89",
          "occupancyDuration": "002119",
        },
        Object {
          "activated": "false",
          "airspaceId": "EDYYCCAOI",
          "airspaceType": "AOI",
          "firstEntryDistance": "204",
          "firstEntryFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "180",
            "unit": "F",
          },
          "firstEntryTime": "2016-11-23 19:50:43",
          "firstEntryTrend": "CRUISE",
          "lastExitDistance": "288",
          "lastExitFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "9",
            "unit": "F",
          },
          "lastExitTime": "2016-11-23 20:11:07",
          "lastExitTrend": "NONE",
          "middleTrend": "DESCENT",
          "occupancyDistance": "85",
          "occupancyDuration": "002024",
        },
        Object {
          "activated": "false",
          "airspaceId": "EDGGCCAOP",
          "airspaceType": "AOP",
          "firstEntryDistance": "210",
          "firstEntryFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "180",
            "unit": "F",
          },
          "firstEntryTime": "2016-11-23 19:52:00",
          "firstEntryTrend": "CRUISE",
          "lastExitDistance": "288",
          "lastExitFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "9",
            "unit": "F",
          },
          "lastExitTime": "2016-11-23 20:11:07",
          "lastExitTrend": "NONE",
          "middleTrend": "DESCENT",
          "occupancyDistance": "79",
          "occupancyDuration": "001907",
        },
        Object {
          "activated": "false",
          "airspaceId": "EBCCAOP",
          "airspaceType": "AOP",
          "firstEntryDistance": "211",
          "firstEntryFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "180",
            "unit": "F",
          },
          "firstEntryTime": "2016-11-23 19:52:14",
          "firstEntryTrend": "CRUISE",
          "lastExitDistance": "288",
          "lastExitFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "9",
            "unit": "F",
          },
          "lastExitTime": "2016-11-23 20:11:07",
          "lastExitTrend": "NONE",
          "middleTrend": "DESCENT",
          "occupancyDistance": "78",
          "occupancyDuration": "001853",
        },
        Object {
          "activated": "false",
          "airspaceId": "EBCCAOI",
          "airspaceType": "AOI",
          "firstEntryDistance": "229",
          "firstEntryFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "180",
            "unit": "F",
          },
          "firstEntryTime": "2016-11-23 19:56:11",
          "firstEntryTrend": "CRUISE",
          "lastExitDistance": "287",
          "lastExitFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "13",
            "unit": "F",
          },
          "lastExitTime": "2016-11-23 20:10:20",
          "lastExitTrend": "DESCENT",
          "middleTrend": "DESCENT",
          "occupancyDistance": "58",
          "occupancyDuration": "001409",
        },
        Object {
          "activated": "false",
          "airspaceId": "EDGGCCAOI",
          "airspaceType": "AOI",
          "firstEntryDistance": "230",
          "firstEntryFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "180",
            "unit": "F",
          },
          "firstEntryTime": "2016-11-23 19:56:18",
          "firstEntryTrend": "CRUISE",
          "lastExitDistance": "284",
          "lastExitFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "25",
            "unit": "F",
          },
          "lastExitTime": "2016-11-23 20:08:42",
          "lastExitTrend": "DESCENT",
          "middleTrend": "DESCENT",
          "occupancyDistance": "54",
          "occupancyDuration": "001224",
        },
        Object {
          "activated": "false",
          "airspaceId": "LFR321",
          "airspaceType": "ERSA",
          "firstEntryDistance": "241",
          "firstEntryFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "180",
            "unit": "F",
          },
          "firstEntryTime": "2016-11-23 19:58:51",
          "firstEntryTrend": "CRUISE",
          "lastExitDistance": "260",
          "lastExitFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "114",
            "unit": "F",
          },
          "lastExitTime": "2016-11-23 20:02:58",
          "lastExitTrend": "DESCENT",
          "middleTrend": "DESCENT",
          "occupancyDistance": "19",
          "occupancyDuration": "000407",
        },
        Object {
          "activated": "false",
          "airspaceId": "LFSTTMA",
          "airspaceType": "AUA",
          "firstEntryDistance": "253",
          "firstEntryFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "144",
            "unit": "F",
          },
          "firstEntryTime": "2016-11-23 20:01:17",
          "firstEntryTrend": "DESCENT",
          "lastExitDistance": "260",
          "lastExitFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "114",
            "unit": "F",
          },
          "lastExitTime": "2016-11-23 20:02:58",
          "lastExitTrend": "DESCENT",
          "middleTrend": "DESCENT",
          "occupancyDistance": "8",
          "occupancyDuration": "000141",
        },
        Object {
          "activated": "true",
          "airspaceId": "LFSTSC",
          "airspaceType": "ES",
          "firstEntryDistance": "253",
          "firstEntryFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "144",
            "unit": "F",
          },
          "firstEntryTime": "2016-11-23 20:01:17",
          "firstEntryTrend": "DESCENT",
          "lastExitDistance": "260",
          "lastExitFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "114",
            "unit": "F",
          },
          "lastExitTime": "2016-11-23 20:02:58",
          "lastExitTrend": "DESCENT",
          "middleTrend": "DESCENT",
          "occupancyDistance": "8",
          "occupancyDuration": "000141",
        },
        Object {
          "activated": "true",
          "airspaceId": "LFSTALL",
          "airspaceType": "CS",
          "firstEntryDistance": "253",
          "firstEntryFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "144",
            "unit": "F",
          },
          "firstEntryTime": "2016-11-23 20:01:17",
          "firstEntryTrend": "DESCENT",
          "lastExitDistance": "260",
          "lastExitFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "114",
            "unit": "F",
          },
          "lastExitTime": "2016-11-23 20:02:58",
          "lastExitTrend": "DESCENT",
          "middleTrend": "DESCENT",
          "occupancyDistance": "8",
          "occupancyDuration": "000141",
        },
        Object {
          "activated": "false",
          "airspaceId": "LFJLTMA",
          "airspaceType": "AUA",
          "firstEntryDistance": "260",
          "firstEntryFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "114",
            "unit": "F",
          },
          "firstEntryTime": "2016-11-23 20:02:58",
          "firstEntryTrend": "DESCENT",
          "lastExitDistance": "288",
          "lastExitFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "9",
            "unit": "F",
          },
          "lastExitTime": "2016-11-23 20:11:07",
          "lastExitTrend": "NONE",
          "middleTrend": "DESCENT",
          "occupancyDistance": "28",
          "occupancyDuration": "000809",
        },
        Object {
          "activated": "true",
          "airspaceId": "LFJLTA",
          "airspaceType": "ES",
          "firstEntryDistance": "260",
          "firstEntryFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "114",
            "unit": "F",
          },
          "firstEntryTime": "2016-11-23 20:02:58",
          "firstEntryTrend": "DESCENT",
          "lastExitDistance": "288",
          "lastExitFlightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "9",
            "unit": "F",
          },
          "lastExitTime": "2016-11-23 20:11:07",
          "lastExitTrend": "NONE",
          "middleTrend": "DESCENT",
          "occupancyDistance": "28",
          "occupancyDuration": "000809",
        },
      ],
      "ftfmPointProfile": Array [
        Object {
          "aerodrome": "LFLL",
          "associatedRouteOrTerminalProcedure": Object {
            "SID": Object {
              "aerodromeId": "LFLL",
              "id": "ALURA8N",
            },
          },
          "coveredDistance": "0",
          "entryTrend": "NONE",
          "exitTrend": "NONE",
          "flightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "0",
            "unit": "F",
          },
          "isVisible": "true",
          "timeOver": "2016-11-23 19:03:00",
        },
        Object {
          "associatedRouteOrTerminalProcedure": Object {
            "SID": Object {
              "aerodromeId": "LFLL",
              "id": "ALURA8N",
            },
          },
          "coveredDistance": "1",
          "entryTrend": "CLIMB",
          "exitTrend": "CLIMB",
          "flightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "15",
            "unit": "F",
          },
          "flightPlanPoint": "false",
          "isVisible": "true",
          "timeOver": "2016-11-23 19:03:21",
        },
        Object {
          "associatedRouteOrTerminalProcedure": Object {
            "SID": Object {
              "aerodromeId": "LFLL",
              "id": "ALURA8N",
            },
          },
          "coveredDistance": "2",
          "entryTrend": "CLIMB",
          "exitTrend": "CLIMB",
          "flightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "25",
            "unit": "F",
          },
          "flightPlanPoint": "false",
          "isVisible": "true",
          "timeOver": "2016-11-23 19:03:53",
        },
        Object {
          "associatedRouteOrTerminalProcedure": Object {
            "SID": Object {
              "aerodromeId": "LFLL",
              "id": "ALURA8N",
            },
          },
          "coveredDistance": "4",
          "entryTrend": "CLIMB",
          "exitTrend": "CLIMB",
          "flightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "35",
            "unit": "F",
          },
          "flightPlanPoint": "false",
          "isVisible": "true",
          "timeOver": "2016-11-23 19:04:27",
        },
        Object {
          "associatedRouteOrTerminalProcedure": Object {
            "SID": Object {
              "aerodromeId": "LFLL",
              "id": "ALURA8N",
            },
          },
          "coveredDistance": "5",
          "entryTrend": "CLIMB",
          "exitTrend": "CLIMB",
          "flightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "41",
            "unit": "F",
          },
          "flightPlanPoint": "true",
          "isVisible": "true",
          "point": Object {
            "nonPublishedPoint-DBEPoint": Object {
              "dbePointId": "*9LSE",
            },
          },
          "timeOver": "2016-11-23 19:04:47",
        },
        Object {
          "associatedRouteOrTerminalProcedure": Object {
            "SID": Object {
              "aerodromeId": "LFLL",
              "id": "ALURA8N",
            },
          },
          "coveredDistance": "10",
          "entryTrend": "CLIMB",
          "exitTrend": "CLIMB",
          "flightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "70",
            "unit": "F",
          },
          "flightPlanPoint": "false",
          "isVisible": "true",
          "timeOver": "2016-11-23 19:06:27",
        },
        Object {
          "associatedRouteOrTerminalProcedure": Object {
            "SID": Object {
              "aerodromeId": "LFLL",
              "id": "ALURA8N",
            },
          },
          "coveredDistance": "12",
          "entryTrend": "CLIMB",
          "exitTrend": "CLIMB",
          "flightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "77",
            "unit": "F",
          },
          "flightPlanPoint": "true",
          "isVisible": "true",
          "point": Object {
            "pointId": "DANBO",
          },
          "timeOver": "2016-11-23 19:06:56",
        },
        Object {
          "associatedRouteOrTerminalProcedure": Object {
            "SID": Object {
              "aerodromeId": "LFLL",
              "id": "ALURA8N",
            },
          },
          "coveredDistance": "15",
          "entryTrend": "CLIMB",
          "exitTrend": "CLIMB",
          "flightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "90",
            "unit": "F",
          },
          "flightPlanPoint": "false",
          "isVisible": "true",
          "timeOver": "2016-11-23 19:07:51",
        },
        Object {
          "associatedRouteOrTerminalProcedure": Object {
            "SID": Object {
              "aerodromeId": "LFLL",
              "id": "ALURA8N",
            },
          },
          "coveredDistance": "19",
          "entryTrend": "CLIMB",
          "exitTrend": "CLIMB",
          "flightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "110",
            "unit": "F",
          },
          "flightPlanPoint": "false",
          "isVisible": "true",
          "timeOver": "2016-11-23 19:09:24",
        },
        Object {
          "associatedRouteOrTerminalProcedure": Object {
            "SID": Object {
              "aerodromeId": "LFLL",
              "id": "ALURA8N",
            },
          },
          "coveredDistance": "25",
          "entryTrend": "CLIMB",
          "exitTrend": "CLIMB",
          "flightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "130",
            "unit": "F",
          },
          "flightPlanPoint": "false",
          "isVisible": "true",
          "timeOver": "2016-11-23 19:11:08",
        },
        Object {
          "associatedRouteOrTerminalProcedure": Object {
            "SID": Object {
              "aerodromeId": "LFLL",
              "id": "ALURA8N",
            },
          },
          "coveredDistance": "32",
          "entryTrend": "CLIMB",
          "exitTrend": "CLIMB",
          "flightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "150",
            "unit": "F",
          },
          "flightPlanPoint": "false",
          "isVisible": "true",
          "timeOver": "2016-11-23 19:13:07",
        },
        Object {
          "associatedRouteOrTerminalProcedure": Object {
            "SID": Object {
              "aerodromeId": "LFLL",
              "id": "ALURA8N",
            },
          },
          "coveredDistance": "34",
          "entryTrend": "CLIMB",
          "exitTrend": "CLIMB",
          "flightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "155",
            "unit": "F",
          },
          "flightPlanPoint": "true",
          "isVisible": "true",
          "point": Object {
            "nonPublishedPoint-DBEPoint": Object {
              "dbePointId": "*LL03",
            },
          },
          "timeOver": "2016-11-23 19:13:39",
        },
        Object {
          "associatedRouteOrTerminalProcedure": Object {
            "SID": Object {
              "aerodromeId": "LFLL",
              "id": "ALURA8N",
            },
          },
          "coveredDistance": "41",
          "entryTrend": "CLIMB",
          "exitTrend": "CLIMB",
          "flightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "170",
            "unit": "F",
          },
          "flightPlanPoint": "false",
          "isVisible": "true",
          "timeOver": "2016-11-23 19:15:22",
        },
        Object {
          "associatedRouteOrTerminalProcedure": Object {
            "route": "A6",
          },
          "coveredDistance": "46",
          "entryTrend": "CLIMB",
          "exitTrend": "CRUISE",
          "flightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "180",
            "unit": "F",
          },
          "flightPlanPoint": "true",
          "isVisible": "true",
          "point": Object {
            "pointId": "ALURA",
          },
          "timeOver": "2016-11-23 19:16:56",
        },
        Object {
          "associatedRouteOrTerminalProcedure": Object {
            "route": "B37",
          },
          "coveredDistance": "93",
          "entryTrend": "CRUISE",
          "exitTrend": "CRUISE",
          "flightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "180",
            "unit": "F",
          },
          "flightPlanPoint": "true",
          "isVisible": "true",
          "point": Object {
            "pointId": "DJL",
          },
          "timeOver": "2016-11-23 19:27:02",
        },
        Object {
          "associatedRouteOrTerminalProcedure": Object {
            "route": "G21",
          },
          "coveredDistance": "115",
          "entryTrend": "CRUISE",
          "exitTrend": "CRUISE",
          "flightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "180",
            "unit": "F",
          },
          "flightPlanPoint": "true",
          "isVisible": "true",
          "point": Object {
            "pointId": "KASON",
          },
          "timeOver": "2016-11-23 19:31:41",
        },
        Object {
          "associatedRouteOrTerminalProcedure": Object {
            "route": "G21",
          },
          "coveredDistance": "144",
          "entryTrend": "CRUISE",
          "exitTrend": "CRUISE",
          "flightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "180",
            "unit": "F",
          },
          "flightPlanPoint": "true",
          "isVisible": "true",
          "point": Object {
            "pointId": "RLP",
          },
          "timeOver": "2016-11-23 19:37:50",
        },
        Object {
          "associatedRouteOrTerminalProcedure": Object {
            "route": "G21",
          },
          "coveredDistance": "184",
          "entryTrend": "CRUISE",
          "exitTrend": "CRUISE",
          "flightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "180",
            "unit": "F",
          },
          "flightPlanPoint": "true",
          "isVisible": "true",
          "point": Object {
            "pointId": "EPL",
          },
          "timeOver": "2016-11-23 19:46:33",
        },
        Object {
          "associatedRouteOrTerminalProcedure": Object {
            "route": "G21",
          },
          "coveredDistance": "208",
          "entryTrend": "CRUISE",
          "exitTrend": "CRUISE",
          "flightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "180",
            "unit": "F",
          },
          "flightPlanPoint": "true",
          "isVisible": "true",
          "point": Object {
            "pointId": "GIVOR",
          },
          "timeOver": "2016-11-23 19:51:46",
        },
        Object {
          "associatedRouteOrTerminalProcedure": Object {
            "STAR": Object {
              "aerodromeId": "LFJL",
              "id": "MONCE2A",
            },
          },
          "coveredDistance": "212",
          "entryTrend": "CRUISE",
          "exitTrend": "CRUISE",
          "flightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "180",
            "unit": "F",
          },
          "flightPlanPoint": "true",
          "isVisible": "true",
          "point": Object {
            "pointId": "MONCE",
          },
          "timeOver": "2016-11-23 19:52:28",
        },
        Object {
          "associatedRouteOrTerminalProcedure": Object {
            "STAR": Object {
              "aerodromeId": "LFJL",
              "id": "MONCE2A",
            },
          },
          "coveredDistance": "244",
          "entryTrend": "CRUISE",
          "exitTrend": "DESCENT",
          "flightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "180",
            "unit": "F",
          },
          "flightPlanPoint": "false",
          "isVisible": "true",
          "timeOver": "2016-11-23 19:59:19",
        },
        Object {
          "associatedRouteOrTerminalProcedure": Object {
            "STAR": Object {
              "aerodromeId": "LFJL",
              "id": "MONCE2A",
            },
          },
          "coveredDistance": "246",
          "entryTrend": "DESCENT",
          "exitTrend": "DESCENT",
          "flightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "170",
            "unit": "F",
          },
          "flightPlanPoint": "false",
          "isVisible": "true",
          "timeOver": "2016-11-23 19:59:52",
        },
        Object {
          "associatedRouteOrTerminalProcedure": Object {
            "STAR": Object {
              "aerodromeId": "LFJL",
              "id": "MONCE2A",
            },
          },
          "coveredDistance": "247",
          "entryTrend": "DESCENT",
          "exitTrend": "DESCENT",
          "flightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "166",
            "unit": "F",
          },
          "flightPlanPoint": "true",
          "isVisible": "true",
          "point": Object {
            "pointId": "MTZ",
          },
          "timeOver": "2016-11-23 20:00:06",
        },
        Object {
          "associatedRouteOrTerminalProcedure": Object {
            "STAR": Object {
              "aerodromeId": "LFJL",
              "id": "MONCE2A",
            },
          },
          "coveredDistance": "251",
          "entryTrend": "DESCENT",
          "exitTrend": "DESCENT",
          "flightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "150",
            "unit": "F",
          },
          "flightPlanPoint": "false",
          "isVisible": "true",
          "timeOver": "2016-11-23 20:00:57",
        },
        Object {
          "associatedRouteOrTerminalProcedure": Object {
            "STAR": Object {
              "aerodromeId": "LFJL",
              "id": "MONCE2A",
            },
          },
          "coveredDistance": "257",
          "entryTrend": "DESCENT",
          "exitTrend": "DESCENT",
          "flightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "130",
            "unit": "F",
          },
          "flightPlanPoint": "false",
          "isVisible": "true",
          "timeOver": "2016-11-23 20:02:04",
        },
        Object {
          "associatedRouteOrTerminalProcedure": Object {
            "STAR": Object {
              "aerodromeId": "LFJL",
              "id": "MONCE2A",
            },
          },
          "coveredDistance": "261",
          "entryTrend": "DESCENT",
          "exitTrend": "DESCENT",
          "flightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "110",
            "unit": "F",
          },
          "flightPlanPoint": "false",
          "isVisible": "true",
          "timeOver": "2016-11-23 20:03:13",
        },
        Object {
          "associatedRouteOrTerminalProcedure": Object {
            "STAR": Object {
              "aerodromeId": "LFJL",
              "id": "MONCE2A",
            },
          },
          "coveredDistance": "267",
          "entryTrend": "DESCENT",
          "exitTrend": "DESCENT",
          "flightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "90",
            "unit": "F",
          },
          "flightPlanPoint": "false",
          "isVisible": "true",
          "timeOver": "2016-11-23 20:04:24",
        },
        Object {
          "associatedRouteOrTerminalProcedure": Object {
            "STAR": Object {
              "aerodromeId": "LFJL",
              "id": "MONCE2A",
            },
          },
          "coveredDistance": "276",
          "entryTrend": "DESCENT",
          "exitTrend": "DESCENT",
          "flightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "50",
            "unit": "F",
          },
          "flightPlanPoint": "false",
          "isVisible": "true",
          "timeOver": "2016-11-23 20:06:54",
        },
        Object {
          "associatedRouteOrTerminalProcedure": Object {
            "STAR": Object {
              "aerodromeId": "LFJL",
              "id": "MONCE2A",
            },
          },
          "coveredDistance": "284",
          "entryTrend": "DESCENT",
          "exitTrend": "DESCENT",
          "flightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "25",
            "unit": "F",
          },
          "flightPlanPoint": "false",
          "isVisible": "true",
          "timeOver": "2016-11-23 20:08:42",
        },
        Object {
          "associatedRouteOrTerminalProcedure": Object {
            "STAR": Object {
              "aerodromeId": "LFJL",
              "id": "MONCE2A",
            },
          },
          "coveredDistance": "285",
          "entryTrend": "DESCENT",
          "exitTrend": "DESCENT",
          "flightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "20",
            "unit": "F",
          },
          "flightPlanPoint": "false",
          "isVisible": "true",
          "timeOver": "2016-11-23 20:09:24",
        },
        Object {
          "associatedRouteOrTerminalProcedure": Object {
            "STAR": Object {
              "aerodromeId": "LFJL",
              "id": "MONCE2A",
            },
          },
          "coveredDistance": "286",
          "entryTrend": "DESCENT",
          "exitTrend": "DESCENT",
          "flightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "15",
            "unit": "F",
          },
          "flightPlanPoint": "false",
          "isVisible": "true",
          "timeOver": "2016-11-23 20:10:03",
        },
        Object {
          "associatedRouteOrTerminalProcedure": Object {
            "STAR": Object {
              "aerodromeId": "LFJL",
              "id": "MONCE2A",
            },
          },
          "coveredDistance": "288",
          "entryTrend": "DESCENT",
          "exitTrend": "DESCENT",
          "flightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "10",
            "unit": "F",
          },
          "flightPlanPoint": "false",
          "isVisible": "true",
          "timeOver": "2016-11-23 20:10:55",
        },
        Object {
          "aerodrome": "LFJL",
          "associatedRouteOrTerminalProcedure": Object {
            "DCT": "",
          },
          "coveredDistance": "288",
          "entryTrend": "NONE",
          "exitTrend": "NONE",
          "flightLevel": Object {
            "ceiling": "false",
            "ground": "false",
            "level": "0",
            "unit": "F",
          },
          "isVisible": "true",
          "timeOver": "2016-11-23 20:11:07",
        },
      ],
    },
  },
  "requestId": "B2B_CUR:2491626",
  "requestReceptionTime": "2016-11-23 19:21:29",
  "sendTime": "2016-11-23 19:21:29",
  "status": "OK",
}
`;
